<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/urlText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_url"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/address_url"
        android:inputType="textUri"
        android:text="@string/default_address_url" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/applyChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/apply_changes" />
</LinearLayout>