<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/background"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/brickImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@color/colorPrimary"
        android:contentDescription="@string/brick_image" />

    <TextView
        android:id="@+id/brickName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textAlignment="viewStart"
        tools:ignore="RtlCompat,RtlSymmetry" />

    <Button
        android:id="@+id/brickCountDown"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/countDown"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/brickCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:inputType="number"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/brickCountSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countSeparator" />

    <TextView
        android:id="@+id/brickCountNeeded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Button
        android:id="@+id/brickCountUp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/countUp"
        android:textStyle="bold" />

</LinearLayout>